--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -25,6 +25,7 @@
         top: 50%;
         left: 50%;
         padding: 40px;
+        width: 95vw;
     
         transform: translateX(-50%) translateY(-50%);
     
@@ -228,7 +229,8 @@
 
 .modal-form-agreement-desc {
     font-weight: 400;
-    
+    font-size: 12px;
+        line-height: 14px;
 
     letter-spacing: 0.03em;
 
@@ -236,15 +238,15 @@
 
     color: #757575;
 
-    @media screen and (max-width: 479px) {
-        font-size: 12px;
-            line-height: 14px;
-        }
+    // @media screen and (max-width: 767px) {
+    //     font-size: 12px;
+    //         line-height: 14px;
+    //     }
     
-        @media screen and (min-width: 480px) {
-            font-size: 12px;
-                line-height: 14px;
-        }
+        // @media screen and (min-width: 480px) {
+        //     font-size: 12px;
+        //         line-height: 14px;
+        // }
 
                 @media screen and (min-width: 1200px) {
                     font-size: 14px;
