--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,104 +1,207 @@
 .hero {
+  padding-top: 118px;
+  padding-bottom: 118px;
+  margin: 0 auto;
+
   background-color: var(--background-color-black);
-  padding-top: 200px;
-  padding-bottom: 200px;
-
-  @media screen and (max-width: 480px) {
-    padding-top: 118px;
-    padding-bottom: 118px;
-  }
-
-  @media screen and (max-width: 768px) {
-    padding-top: 118px;
-    padding-bottom: 118px;
-  }
-}
-
-.hero__overlay {
-  @media screen and (max-width: 480px) {
-    max-width: 480px;
-    height: 400px;
-    background-image: linear-gradient(
-        to right,
-        rgba(47, 48, 58, 0.4),
-        rgba(47, 48, 58, 0.4)
-      ),
-      url(../img/hero/img_s@1x.jpg);
-
-    @media (min-device-pixel-ratio: 2),
-      (min-resolution: 192dpi),
-      (min-resolution: 2dppx) {
-        background-image: linear-gradient(to right,
-              rgba(47, 48, 58, 0.4),
-              rgba(47, 48, 58, 0.4)),
-            url(../img/hero/img_s@2x.jpg);
-    }
-  }
-
-  @media screen and (max-width: 768px) {
-    max-width: 768px;
-    height: 400px;
-    background-image: linear-gradient(
-        to right,
-        rgba(47, 48, 58, 0.4),
-        rgba(47, 48, 58, 0.4)
-      ),
-      url(../img/hero/img_m@1x.jpg);
-
-      @media (min-device-pixel-ratio: 2),
-        (min-resolution: 192dpi),
-        (min-resolution: 2dppx) {
-          background-image: linear-gradient(to right,
-              rgba(47, 48, 58, 0.4),
-              rgba(47, 48, 58, 0.4)),
-            url(../img/hero/img_m@2x.jpg);
-        }
-  }
-
-  max-width: 1600px;
-  height: 600px;
-  margin-left: auto;
-  margin-right: auto;
   background-image: linear-gradient(
       to right,
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url(../img/hero/Img_l@1x.jpg);
-         @media (min-device-pixel-ratio: 2),
-         (min-resolution: 192dpi),
-         (min-resolution: 2dppx) {
-           background-image: linear-gradient(to right,
-               rgba(47, 48, 58, 0.4),
-               rgba(47, 48, 58, 0.4)),
-             url(../img/hero/Img_l@2x.jpg);
-         }
+    url("../img/hero/img_s@1x.jpg");
   background-position: center;
-  background-repeat: no-repeat;
   background-size: cover;
+  text-align: center;
+
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    background-image: linear-gradient(
+        to right,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url("../img/hero/img_s@2x.jpg");
+  }
+
+  @media screen and (min-width: 480px) {
+    width: 480px;
+    height: 400px;
+  }
+
+  @media screen and (min-width: 768px) {
+    width: 768px;
+    height: 400px;
+    background-image: linear-gradient(
+        to right,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url("../img/hero/img_m@1x.jpg");
+
+    @media (min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      background-image: linear-gradient(
+          to right,
+          rgba(47, 48, 58, 0.4),
+          rgba(47, 48, 58, 0.4)
+        ),
+        url("../img/hero/img_m@2x.jpg");
+    }
+
+    @media screen and (min-width: 1200px) {
+      width: 1600px;
+      height: 600px;
+      padding-top: 200px;
+      padding-bottom: 200px;
+
+      background-image: linear-gradient(
+          to right,
+          rgba(47, 48, 58, 0.4),
+          rgba(47, 48, 58, 0.4)
+        ),
+        url("../img/hero/Img_l@1x.jpg");
+
+      @media (min-device-pixel-ratio: 2),
+        (min-resolution: 192dpi),
+        (min-resolution: 2dppx) {
+        background-image: linear-gradient(
+            to right,
+            rgba(47, 48, 58, 0.4),
+            rgba(47, 48, 58, 0.4)
+          ),
+          url("../img/hero/Img_l@2x.jpg");
+      }
+    }
+  }
+
+  //   @media (min-device-pixel-ratio: 3),
+  //   (min-resolution: 288dpi),
+  //   (min-resolution: 3dppx) {
+  //     background-image: linear-gradient(
+  //      to right,
+  //      rgba(47, 48, 58, 0.4),
+  //      rgba(47, 48, 58, 0.4)
+  //    ), url("../images/desktop/header@3x.jpg");
+  //   }
+  // }
+  // background-color: var(--background-color-black);
+  // padding-top: 200px;
+  // padding-bottom: 200px;
+
+  // @media screen and (max-width: 480px) {
+  //   padding-top: 118px;
+  //   padding-bottom: 118px;
+  // }
+
+  // @media screen and (max-width: 768px) {
+  //   padding-top: 118px;
+  //   padding-bottom: 118px;
+  // }
 }
 
+// .hero__overlay {
+//   @media screen and (max-width: 480px) {
+//     max-width: 480px;
+//     height: 400px;
+//     background-image: linear-gradient(
+//         to right,
+//         rgba(47, 48, 58, 0.4),
+//         rgba(47, 48, 58, 0.4)
+//       ),
+//       url(../img/hero/img_s@1x.jpg);
+
+//     @media (min-device-pixel-ratio: 2),
+//       (min-resolution: 192dpi),
+//       (min-resolution: 2dppx) {
+//         background-image: linear-gradient(to right,
+//               rgba(47, 48, 58, 0.4),
+//               rgba(47, 48, 58, 0.4)),
+//             url(../img/hero/img_s@2x.jpg);
+//     }
+//   }
+
+//   @media screen and (max-width: 768px) {
+//     max-width: 768px;
+//     height: 400px;
+//     background-image: linear-gradient(
+//         to right,
+//         rgba(47, 48, 58, 0.4),
+//         rgba(47, 48, 58, 0.4)
+//       ),
+//       url(../img/hero/img_m@1x.jpg);
+
+//       @media (min-device-pixel-ratio: 2),
+//         (min-resolution: 192dpi),
+//         (min-resolution: 2dppx) {
+//           background-image: linear-gradient(to right,
+//               rgba(47, 48, 58, 0.4),
+//               rgba(47, 48, 58, 0.4)),
+//             url(../img/hero/img_m@2x.jpg);
+//         }
+//   }
+
+//   max-width: 1600px;
+//   height: 600px;
+//   margin-left: auto;
+//   margin-right: auto;
+//   background-image: linear-gradient(
+//       to right,
+//       rgba(47, 48, 58, 0.4),
+//       rgba(47, 48, 58, 0.4)
+//     ),
+//     url(../img/hero/Img_l@1x.jpg);
+//          @media (min-device-pixel-ratio: 2),
+//          (min-resolution: 192dpi),
+//          (min-resolution: 2dppx) {
+//            background-image: linear-gradient(to right,
+//                rgba(47, 48, 58, 0.4),
+//                rgba(47, 48, 58, 0.4)),
+//              url(../img/hero/Img_l@2x.jpg);
+//          }
+//   background-position: center;
+//   background-repeat: no-repeat;
+//   background-size: cover;
+// }
+
 .hero__title {
-  margin: 0 auto;
   margin-bottom: 30px;
-  width: 696px;
-  font-weight: 900;
-  font-size: 44px;
-  line-height: calc(60 / 44);
-  text-align: center;
-  letter-spacing: 0.06em;
-  text-transform: uppercase;
-  color: var(--main-title-color);
-
-  @media screen and (max-width: 480px) {
-    width: 360px;
+    
+    font-weight: 900;
     font-size: 26px;
     line-height: calc(42 / 26);
-  }
+    text-align: center;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+  
+    color: var(--main-title-color);
+  
+    @media screen and (min-width: 1200px) {
+      font-size: 44px;
+      line-height: calc(60 / 40);
+    }
+  // margin: 0 auto;
+  // margin-bottom: 30px;
+  // width: 696px;
+  // font-weight: 900;
+  // font-size: 44px;
+  // line-height: calc(60 / 44);
+  // text-align: center;
+  // letter-spacing: 0.06em;
+  // text-transform: uppercase;
+  // color: var(--main-title-color);
 
-  @media screen and (max-width: 768px) {
-    width: 360px;
-    font-size: 26px;
-    line-height: calc(42 / 26);
-  }
+  // @media screen and (max-width: 480px) {
+  //   width: 360px;
+  //   font-size: 26px;
+  //   line-height: calc(42 / 26);
+  // }
+
+  // @media screen and (max-width: 768px) {
+  //   width: 360px;
+  //   font-size: 26px;
+  //   line-height: calc(42 / 26);
+  // }
 }
