--- a/css/main.css
+++ b/css/main.css
@@ -1644,8 +1644,8 @@ img {
   left: 0;
   -webkit-transform: translateY(100%);
           transform: translateY(100%);
-  width: 100%;
-  height: 100%;
+  width: 101%;
+  height: 101%;
   padding-left: 24px;
   padding-right: 24px;
   display: -webkit-box;
@@ -1679,11 +1679,14 @@ img {
 }
 
 .grid__wrapper {
-  padding-left: 24px;
-  padding-right: 24px;
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding: 20px 24px;
   border: 1px solid #eeeeee;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .grid__wrapper--big-padding {
+    padding-bottom: 56px;
+  }
 }
 
 .grid__title {
