--- a/sass/components/_grid.scss
+++ b/sass/components/_grid.scss
@@ -59,8 +59,8 @@
 
   transform: translateY(100%);
 
-  width: 100%;
-  height: 100%;
+  width: 101%;
+  height: 101%;
   padding-left: 24px;
   padding-right: 24px;
   display: flex;
@@ -88,12 +88,18 @@
 }
 
 .grid__wrapper {
-  padding-left: 24px;
-  padding-right: 24px;
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding: 20px 24px;
   border: 1px solid #eeeeee;
+
 }
+
+ .grid__wrapper--big-padding{
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+      padding-bottom: 56px;
+    }
+  }
+ 
+
 
 .grid__title {
   padding-bottom: 4px;
